--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
 
             <div class="instructor-card">
-                <img src="images/aman_foujdar.jpg" alt="Aman Foujdar" class="instructor-img">
+                <img src="images/aman_foujdar.JPG" alt="Aman Foujdar" class="instructor-img">
                 <h3>Aman Foujdar</h3>
                 <ul>
                     <li>Research Assistant under Prof. Juneja at SCDLDS</li>
@@ -307,5 +307,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
