--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
                 </ul>
             </div>
 
+            <p style="margin-top: 2 rem;"></p>
+
             <div class="instructor-card">
                 <img src="images/aman_foujdar.JPG" alt="Aman Foujdar" class="instructor-img">
                 <h3>Aman Foujdar</h3>
@@ -307,6 +309,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
