--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
             <div class="instructor-card">
                 <img src="images/sandeep_juneja.jpg" alt="Prof. Sandeep Juneja" class="instructor-img">
-                <h3>Prof. Sandeep Juneja</h3>
+                <h3><a href="https://www.linkedin.com/in/sandeep-juneja-937b44b/" target="_blank" rel="noopener noreferrer" class="plain-link">Prof. Sandeep Juneja</a></h3>
                 <ul>
                     <li>Professor of Computer Science at Ashoka University. Director, Safexpress Centre for Data, Learning and Decision Sciences</li>
                     <li>Former Professor at TIFR and IIT Delhi. Former Head of Quantitative Ops (Bank of America, India)</li>
@@ -232,7 +232,7 @@
 
             <div class="instructor-card">
                 <img src="images/aman_foujdar.JPG" alt="Aman Foujdar" class="instructor-img">
-                <h3>Aman Foujdar</h3>
+                <h3><a href="https://www.linkedin.com/in/amanfoujdar/" target="_blank" rel="noopener noreferrer" class="plain-link">Aman Foujdar</a></h3>
                 <ul>
                     <li>Research Assistant under Prof. Juneja at SCDLDS</li>
                     <li>Interested in Machine Learning, Deep RL, GenAI, Financial Markets</li>
@@ -309,6 +309,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
