--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="home" class="page active">
         <div class="hero">
             <div class="hero-content">
-                <h1>QuantFin Hub @ SCDLDS</h1>
+                <h1>QuantFin Hub @ Ashoka</h1>
                 <p>
                 A comprehensive quant finance resource featuring advanced courses and materials in mathematical finance, stochastic calculus, and quantitative methods. Developed under the <b>Safexpress Center for Data, Learning, and Decision Sciences (SCDLDS)</b> at Ashoka University, led by Prof. Sandeep Juneja.
                 </p>
@@ -309,6 +309,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
